# skribe-desktop

./: .gitignore  CONTRIBUTING.md  LAUNCH-CHECKLIST.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: release.yml
docs/: Gamification Benefits.md  design.md  prd.md  product-roadmap.md  release-signing.md
landing/: index.html  styles.css
scripts/: export-apple-cert-for-ci.sh  generate-icon.mjs  prepare-sidecar.mjs
sidecar-acp/: package.json
sidecar-acp/src/: claudeArgs.ts  claudeStream.ts  index.ts  prompts.ts
sidecar-acp/test/: claudeArgs.test.ts  claudeStream.test.ts  prompts.test.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: acp-sidecar
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_path.rs  error.rs  main.rs  models.rs  settings.rs  state.rs
src-tauri/src/commands/: acp.rs  claude.rs  fs.rs  mod.rs  settings.rs
src/lib/: acp.test.ts  acp.ts  activeFileChange.test.ts  activeFileChange.ts  aiPromptTarget.test.ts  aiPromptTarget.ts  claudeSetup.ts  debounce.ts  readability.test.ts  readability.ts  tauri.ts  writingInstructions.test.ts  writingInstructions.ts
src/stores/: aiStore.listeners.test.ts  aiStore.test.ts  aiStore.ts  editorHistoryStore.test.ts  editorHistoryStore.ts  editorStore.test.ts  editorStore.ts  folderStore.ts  preflightStore.ts  sessionSettingsStore.test.ts  sessionSettingsStore.ts  settingsStore.ts
src/styles/: global.css  (+1 more)
(+38 files in other folders)
