[package]
name = "skribe"
version = "0.1.0"
description = "A Mac-native markdown writing app where Claude Code edits documents in real time."
authors = ["Skribe contributors"]
license = "MIT"
repository = "https://github.com/chrisashby/skribe"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "5"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
trash = "5"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
